# detectable_climate

./: .gitignore  .pre-commit-config.yaml  Compare_Ensembles.ipynb  DaskTest-XArray.ipynb  DaskTest.ipynb  DataCheck.ipynb  Explore_KS_Test.ipynb  Explore_KS_Test_Interactive.ipynb  FDR_Tests.ipynb  LICENSE  Plot_Bootstrap_Results.ipynb  Plot_Control_Stats.ipynb  Plot_YearAvg_Bootstrap_Results.ipynb  Plot_ensemble.ipynb  README.md  batch_bootstrap_anvil.sbatch  batch_bootstrap_chrys.sbatch  boostrap_ks_test.py  bootstrap_ks_test.py  case_db.json  plot_bootstrap_results.py  pyproject.toml  results_plot.py
.github/workflows/: python-tests.yml
detclim/: __init__.py  batch_bootstrap_anvil.sbatch  batch_bootstrap_chrys.sbatch  bootstrap_ks_test.py  bootstrap_tests.py  ens_size_plots.py  plot_bootstrap_results.py  plot_control_stats.py  plot_ensemble_cdf.py  plot_ensemble_mean_map.py  plot_fpr.py  results_plot.py
detclim/bootstrap_data/: case_db.json
detclim/notebooks/: BootstrapTest.ipynb  Compare_Ensembles.ipynb  DaskTest-XArray.ipynb  DaskTest.ipynb  DataCheck.ipynb  Explore_KS_Test.ipynb  Explore_KS_Test_Interactive.ipynb  FDR_Tests.ipynb  Plot_Bootstrap_Results.ipynb  Plot_Control_Stats.ipynb  Plot_YearAvg_Bootstrap_Results.ipynb  Plot_ensemble.ipynb
run_scripts/: clone_and_run_and_postproc.py  create_run.py  new_vars.json  post_proc.py  post_proc.sbatch  post_proc_anvil.sbatch  post_proc_chrys.sbatch  post_proc_pertlim_test.py
tests/: test_detclim.py
