# coding=utf-8
# Copyright (c) 2022-2024 UT-BATTELLE, LLC
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this
# list of conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice,
# this list of conditions and the following disclaimer in the documentation
# and/or other materials provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors
# may be used to endorse or promote products derived from this software without
# specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
# ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
# FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
# SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
# CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "Michael Kelleher", email = "kelleherme@ornl.gov" }]
name = "detclim"
requires-python = ">=3.9"
description = "Detectable Climate"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "BSD-3-Clause" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "setuptools",
    "numpy",
    "scipy",
    "matplotlib",
    "statsmodels",
    "xarray",
    "cartopy",
    "jupyter",
    "cftime",
    "dask",
    "nco",
    "nc-time-axis",
    "hvplot",
    "bokeh",
    "holoviews",
    "dask-mpi",
    "seaborn",
    "pandas>=2.0.1",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["ruff", "black", "pylint", "isort", "pytest", "pre-commit>=4.3.0"]

[project.urls]
Homepage = "https://github.com/mkstratos/detectable_climate"

[tool.setuptools]
py-modules = ["detclim"]

[tool.setuptools.dynamic]
version = { attr = "detclim.__version__" }

[tool.pydoctor]
project-name = "detclim"
make-html = true
html-output = "./docs"
docformat = "numpy"
intersphinx = "https://docs.python.org/3/objects.inv"
theme = "readthedocs"
privacy = ["PRIVATE:**.__*__", "PUBLIC:**.__init__"]
add-package = ["./detclim"]
